Update sentiment analysis notebook with training accuracy logs and device information

--- a/notebooks/RNN/sentiment_analysis.ipynb
+++ b/notebooks/RNN/sentiment_analysis.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7f0c63d2",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 accuracy: 0.6004 val_accuracy: 0.6836\n"
+      "Epoch 0 accuracy: 0.6004 val_accuracy: 0.6836\n",
+      "Epoch 1 accuracy: 0.7604 val_accuracy: 0.7934\n",
+      "Epoch 2 accuracy: 0.8470 val_accuracy: 0.8418\n",
+      "Epoch 3 accuracy: 0.8934 val_accuracy: 0.8570\n",
+      "Epoch 4 accuracy: 0.9223 val_accuracy: 0.8632\n",
+      "Epoch 5 accuracy: 0.9457 val_accuracy: 0.8668\n",
+      "Epoch 6 accuracy: 0.9609 val_accuracy: 0.8602\n",
+      "Epoch 7 accuracy: 0.9734 val_accuracy: 0.8562\n",
+      "Epoch 8 accuracy: 0.9835 val_accuracy: 0.8546\n",
+      "Epoch 9 accuracy: 0.9901 val_accuracy: 0.8658\n"
      ]
     }
    ],
@@ -492,6 +501,25 @@
     "    acc_train, loss_train = train(train_dl)\n",
     "    acc_valid, loss_valid = evaluate(valid_dl)\n",
     "    print(f'Epoch {epoch} accuracy: {acc_train:.4f} val_accuracy: {acc_valid:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ab3887d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device name [0]: AMD Radeon RX 7900 XTX\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Device name [0]:', \n",
+    "      torch.cuda.get_device_name(0))"
    ]
   }
  ],
