Update execution counts and add print statements for character set size and text length in language modeling notebook

--- a/notebooks/RNN/language_modeling.ipynb
+++ b/notebooks/RNN/language_modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4c99c77a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9e2b0174",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        " '™'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +133,93 @@
    "source": [
     "char_set"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "062522c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total set size: 86\n",
+      "Total text length in chars: 1130779\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total set size: {len(char_set)}\")\n",
+    "print(f\"Total text length in chars: {len(text)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02354bfb",
+   "metadata": {},
+   "source": [
+    "int mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5ebe956c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text encoded shape: (1130779,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars_sorted = sorted(char_set)\n",
+    "char2int = {ch:i for i,ch in enumerate(chars_sorted)}\n",
+    "char_array = np.array(chars_sorted)\n",
+    "text_encoded = np.array([char2int[char] for char in text], dtype=np.int32)\n",
+    "\n",
+    "print (f\"Text encoded shape: {text_encoded.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cd4f4f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE MYSTERIOUS \n",
+      "[46 34 31  1 39 51 45 46 31 44 35 41 47 45  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text[:15])\n",
+    "print(text_encoded[:15])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfcafe0f",
+   "metadata": {},
+   "source": [
+    "Forming a dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1273326",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
