Finished the language modeling notebook

--- a/notebooks/RNN/language_modeling.ipynb
+++ b/notebooks/RNN/language_modeling.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "66fb91d9",
    "metadata": {},
    "outputs": [
@@ -409,19 +409,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 loss: 4.4793\n",
-      "Epoch 500 loss: 1.4327\n",
-      "Epoch 1000 loss: 1.3615\n",
-      "Epoch 1500 loss: 1.3752\n",
-      "Epoch 2000 loss: 1.3700\n",
-      "Epoch 2500 loss: 1.2882\n",
-      "Epoch 3000 loss: 1.3296\n"
+      "Epoch 0 loss: 1.3421\n",
+      "Epoch 500 loss: 1.2724\n",
+      "Epoch 1000 loss: 1.2246\n",
+      "Epoch 1500 loss: 1.2335\n",
+      "Epoch 2000 loss: 1.2466\n",
+      "Epoch 2500 loss: 1.1604\n",
+      "Epoch 3000 loss: 1.2038\n",
+      "Epoch 3500 loss: 1.2016\n",
+      "Epoch 4000 loss: 1.2193\n",
+      "Epoch 4500 loss: 1.1668\n",
+      "Epoch 5000 loss: 1.1913\n",
+      "Epoch 5500 loss: 1.1457\n",
+      "Epoch 6000 loss: 1.1829\n",
+      "Epoch 6500 loss: 1.1668\n",
+      "Epoch 7000 loss: 1.1114\n",
+      "Epoch 7500 loss: 1.1416\n",
+      "Epoch 8000 loss: 1.1252\n",
+      "Epoch 8500 loss: 1.1242\n",
+      "Epoch 9000 loss: 1.1176\n",
+      "Epoch 9500 loss: 1.1492\n"
      ]
     }
    ],
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3)\n",
     "\n",
     "num_epochs = 10000 \n",
     "\n",
@@ -455,10 +468,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "67e77b3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilities: [0.33333334 0.33333334 0.33333334]\n",
+      "[[0]\n",
+      " [0]\n",
+      " [2]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]]\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.distributions.categorical import Categorical\n",
     "\n",
@@ -471,6 +502,139 @@
     "samples = m.sample((10,))\n",
     " \n",
     "print(samples.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e412dace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The island doubtless, and however, steam,\n",
+      "their life, it must not been astaining the midming service perished some distance, or speaks of the Mercy some times, did not been man, and they counting was strike a few months, when the land all them catitally, Ayrton Spiletty moment was consideral. It cut carrying the mebraining two completed, who visiting the palmifeor before its rents, there black, in vain shot attacking perhaps, without efforty to themselves; then 5000, laugh for lay rushed in a cause under \n"
+     ]
+    }
+   ],
+   "source": [
+    "def sample(model, starting_string, len_generated_text = 500, scale_factor=1.0):\n",
+    "    encoded_input = torch.tensor(np.array([char2int[s] for s in starting_string]))\n",
+    "    encoded_input = torch.reshape(encoded_input, (1,-1))\n",
+    "    \n",
+    "    generated_string = starting_string\n",
+    "    model.eval()\n",
+    "    \n",
+    "    hidden = model.init_hidden(1).to(device)\n",
+    "    hidden = hidden.to('cpu')\n",
+    "    for c in range(len(starting_string)-1):\n",
+    "        _, hidden = model(encoded_input[:,c].view(1), hidden)\n",
+    "    last_char = encoded_input[:,-1]\n",
+    "    \n",
+    "    for i in range(len_generated_text):\n",
+    "        logits, hidden = model(last_char.view(1), hidden)\n",
+    "        logits = torch.squeeze(logits,0)\n",
+    "        scaled_logits = logits*scale_factor\n",
+    "        m = Categorical(logits=scaled_logits)\n",
+    "        last_char = m.sample()\n",
+    "        generated_string += str(char_array[last_char])\n",
+    "        \n",
+    "    return generated_string\n",
+    "\n",
+    "\n",
+    "model.to('cpu')\n",
+    "print(sample(model, starting_string='The island'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f460727",
+   "metadata": {},
+   "source": [
+    "Predictability vs randomness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a60cfcd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilities before scaling:         [0.10650698 0.10650698 0.78698605]\n",
+      "Probabilities after scaling with 0.5: [0.21194156 0.21194156 0.57611686]\n",
+      "Probabilities after scaling with 0.1: [0.3104238  0.3104238  0.37915248]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logits = torch.tensor([[1.0, 1.0, 3.0]])\n",
+    "\n",
+    "print('Probabilities before scaling:        ', nn.functional.softmax(logits, dim=1).numpy()[0])\n",
+    "\n",
+    "print('Probabilities after scaling with 0.5:', nn.functional.softmax(0.5*logits, dim=1).numpy()[0])\n",
+    "\n",
+    "print('Probabilities after scaling with 0.1:', nn.functional.softmax(0.1*logits, dim=1).numpy()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8c638dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The island was state of a power to the winter were could be seen to the settlers were ascertained. The reporter less very placed with the colony, and in the use of the vessel was not the colonists were attached to ashal to the first parts of the sailor, as explain.”\n",
+      "\n",
+      "“Single,” replied the engineer; “but it was not a more than the sailor was struck that it was not all the same part of the island was well as a sort of fire!” said the reporter.\n",
+      "\n",
+      "“It is a more than this explorer that the engineer and he conta\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample(model, starting_string='The island', \n",
+    "             scale_factor=2.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "43a7b19d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The island;” replie theim exhirmfe; butirates\n",
+      "equald, “SUIELage Ofze?”\n",
+      "\n",
+      "S Two CoNbufted, Mamormit ihmns hit havily drouse, this he fluOtiiny reachy Pech NadveyEclesty confepss, Herbertewn Prook Spilett currecceNed foxes, my yen--Fos iw\n",
+      "taxieve fexcienlT.\n",
+      "F recirilloced has cool were. The Truratored was\n",
+      "degrness! Of-ns--But Islaedwos\n",
+      "Halimbrage?, Lapor smy.TONoed\n",
+      "a visul afor quittedC severiencwhite bread rothe:--1 YOJKEedviormendrasb, he poly, to Hwo, chest /decks\n",
+      "etc.\n",
+      "\n",
+      "AIGEN G’f.\n",
+      "\n",
+      "IO, quiUnt Duarmor’ Neb\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample(model, starting_string='The island', \n",
+    "             scale_factor=0.5))"
    ]
   }
  ],
